<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.njltech.android.pizzacomposer.MainActivity">

    <ImageView
        android:id="@+id/imgCeasers"
        android:layout_width="117dp"
        android:layout_height="97dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="85dp"
        android:contentDescription="@string/Contact1img"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDominos"
        app:srcCompat="@drawable/littlecaesars" />

    <ImageView
        android:id="@+id/imgDominos"
        android:layout_width="117dp"
        android:layout_height="101dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/Contact2img"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLoveys"
        app:srcCompat="@drawable/dominos" />

    <ImageView
        android:id="@+id/imgLoveys"
        android:layout_width="137dp"
        android:layout_height="126dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/Contact3img"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loveys" />

    <TextView
        android:id="@+id/txtCaesars"
        android:layout_width="155dp"
        android:layout_height="79dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/Contact3"
        android:text="@string/Contact3"
        android:textColor="@android:color/background_dark"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkDominos" />

    <TextView
        android:id="@+id/txtDominos"
        android:layout_width="151dp"
        android:layout_height="73dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/Contact2"
        android:text="@string/Contact2"
        android:textColor="@android:color/background_dark"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkLoveys" />

    <TextView
        android:id="@+id/txtLoveys"
        android:layout_width="153dp"
        android:layout_height="69dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/Contact1"
        android:text="@string/Contact1"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/linkLoveys"
        android:layout_width="151dp"
        android:layout_height="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="85dp"
        android:autoLink="all"
        android:clickable="true"
        android:text="www.loveypizza.com"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/linkDominos"
        android:layout_width="189dp"
        android:layout_height="19dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:autoLink="all"
        android:clickable="true"
        android:text="https://www.dominos.com/en/"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDominos" />

    <TextView
        android:id="@+id/linkCaesars"
        android:layout_width="189dp"
        android:layout_height="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:autoLink="all"
        android:clickable="true"
        android:text="https://littlecaesars.com/"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCaesars" />

</android.support.constraint.ConstraintLayout>
